--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,13 @@
         "es6": true
     },
     "extends": "airbnb-base",
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module"
-    }
+    },
+    "rules": {}
 }
