--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "jest-babel": "^1.0.1"
   },
   "dependencies": {
-    "core-js": "^3.38.1"
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.0",
+    "@eslint/migrate-config": "^1.3.0",
+    "core-js": "^3.38.1",
+    "globals": "^15.9.0"
   }
 }
