--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,11 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
-    "rules": {}
+    "rules": {
+        "no-restricted-syntax": [
+            "error",
+            "LabeledStatement",
+            "WithStatement"
+        ]
+    }
 }
