--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "eslint": "^9.11.0",
-    "eslint-plugin-jest": "^28.8.3",
     "jest": "^29.7.0",
     "jest-babel": "^1.0.1"
   },
@@ -31,6 +30,7 @@
     "@eslint/js": "^9.11.0",
     "@eslint/migrate-config": "^1.3.0",
     "core-js": "^3.38.1",
+    "eslint-config-airbnb-base": "^15.0.0",
     "globals": "^15.9.0"
   }
 }
