--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -21,16 +21,16 @@
     "@babel/cli": "^7.25.6",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
-    "eslint": "^9.11.0",
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-babel": "^1.0.1"
   },
   "dependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.11.0",
     "@eslint/migrate-config": "^1.3.0",
     "core-js": "^3.38.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "globals": "^15.9.0"
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
