--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.25.4",
     "@eslint/js": "^9.11.1",
     "eslint": "^9.11.1",
+    "eslint-plugin-jest": "^28.8.3",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-babel": "^1.0.1"
